# wincpp

examples/: CMakeLists.txt  allocations.cpp  test.cpp  threads.cpp
include/wincpp/: memory_factory.hpp  module_factory.hpp  process.hpp  thread_factory.hpp
include/wincpp/core/: error.hpp
include/wincpp/core/errors/: user.hpp
include/wincpp/memory/: allocation.hpp  memory.hpp  pointer.hpp  protection.hpp  protection_operation.hpp  region.hpp
include/wincpp/modules/: export.hpp  module.hpp  section.hpp
include/wincpp/patterns/: scanner.hpp
include/wincpp/threads/: thread.hpp
include/wincpp/windows/: window.hpp
src/: CMakeLists.txt  memory_factory.cpp  module_factory.cpp  process.cpp  thread_factory.cpp  window_factory.cpp
src/core/: error.cpp  snapshot.cpp
src/core/errors/: user.cpp
src/memory/: allocation.cpp  memory.cpp  protection.cpp  protection_operation.cpp  region.cpp
src/modules/: export.cpp  module.cpp  section.cpp
src/threads/: thread.cpp
src/windows/: window.cpp
